# Engine3

./: CMakeLists.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  Engine.cpp  Engine.h  Events.cpp  Events.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Window.h  main.cpp
src/Core/: Engine.cpp  Events.cpp  Events.h  Renderer.cpp  Renderer.h  Window.h
src/Input/: Action.cpp  Action.h  InputManager.h
src/Input/Conditions/: Condition.h  PressedCondition.h  ReleasedCondition.h
src/Input/Modifiers/: DeadZoneModifier.h  Modifier.h  SwizzleModifier.h
src/Maths/: Maths.h  Matrix.h  PolarCoordinates.h  PolarPoint.h  Quaternion.h  Vector.h
src/Utility/: BitFlags.h
test/: CMakeLists.txt  CustomMatchers.h  Matrix.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Vector.cpp
test/Maths/: Maths.cpp  Matrix.cpp  Matrix3x3.cpp  Matrix4x4.cpp  PolarCoordinates.cpp  PolarPoint.cpp  Quaternion.cpp  Vector.cpp
test/Utility/: BitFlags.cpp
